add files for revision

--- a/notebooks/pipeline_benchmark_ovules.ipynb
+++ b/notebooks/pipeline_benchmark_ovules.ipynb
@@ -2,13 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "import h5py\n",
     "import numpy as np\n",
-    "import imageio\n",
     "from cellpose import models\n",
     "from cellpose import utils as cp_utils\n",
     "from cellstitch.pipeline import *\n",
@@ -19,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,27 +26,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Pipeline Benchmark\n",
-    "\n",
-    "Comparision between cellstitch (2D), cellpose3D (2.5D), plantseg (3D), cellstitch3D; using the same training set.\n",
-    "\n",
-    "### PlantSeg\n",
-    "- First, created a plantseg virtual enviroment: \n",
-    "`conda create -n plant-seg -c pytorch -c conda-forge -c lcerrone -c awolny pytorch=1.9 pytorch-3dunet=1.3.7 plantseg` \n",
-    "- activate the environment: `conda activate plant-seg` \n",
-    "- download the ovules test dataset: https://osf.io/uzq3w/ to `../data/ovules/plantseg_test/` \n",
-    "- set the `path` in `plantseg.yaml` to `../data/ovules/plantseg_test/` \n",
-    "- perform segmentation with the `confocal_unet_bce_dice_ds1x` by running `plantseg --config plantseg.yaml`\n",
-    "- the predictions are saved to `../data/ovules/plantseg_test/PreProcessing/confocal_unet_bce_dice_ds1x/\n",
-    "`"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,28 +41,60 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "plantseg_results_folder = \"../data/ovules/plantseg_test/PreProcessing/confocal_unet_bce_dice_ds1x/MultiCut/\""
+    "# Pipeline Benchmark\n",
+    "\n",
+    "Comparision between cellstitch (2D), cellpose3D (2.5D), plantseg (3D), cellstitch3D; using the same training set.\n",
+    "\n",
+    "### PlantSeg\n",
+    "- First, created a plantseg virtual enviroment: \n",
+    "    - `conda install -c conda-forge mamba` \n",
+    "    - `mamba create -n plant-seg -c pytorch -c nvidia -c conda-forge -c lcerrone plantseg pytorch-cuda=11.7` \n",
+    "- activate the environment: `conda activate plant-seg` \n",
+    "- download the ovules test dataset: https://osf.io/uzq3w/ to `../DATA/<dataset>/plantseg_test/` \n",
+    "- set the `path` in `config.yaml` to `../DATA/<dataset>/plantseg_test/` \n",
+    "- perform segmentation with the `confocal_3D_unet_ovules_ds1x` by running `plantseg --config config.yaml`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "plantseg_results_folder = \"../DATA/%s/plantseg_test/PreProcessing/confocal_3D_unet_ovules_ds1x/MultiCut\" % dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Starting N_294_final_crop_ds2.npy\n",
+      "Starting N_435_final_crop_ds2.npy\n",
+      "Starting N_441_final_crop_ds2.npy\n",
+      "Starting N_511_final_crop_ds2.npy\n",
+      "Starting N_522_final_crop_ds2.npy\n",
+      "Starting N_590_final_crop_ds2.npy\n",
+      "Starting N_593_final_crop_ds2.npy\n"
+     ]
+    }
+   ],
    "source": [
     "for test_filename in test_filenames: \n",
     "    print(\"Starting %s\" % test_filename) \n",
     "    \n",
-    "    with h5py.File(\"%s/%s_predictions_multicut.h5\" % (plantseg_results_folder, test_filename), \"r\") as f:\n",
+    "    with h5py.File(\"%s/%s_predictions_multicut.h5\" % (plantseg_results_folder, test_filename[:-4]), \"r\") as f:\n",
     "        plantseg = np.array(list(f['segmentation'])) \n",
     "        \n",
     "    plantseg[np.where(plantseg == 1)] = 0 # plantseg use 1 as labels\n",
-    "    np.save(\"./results/ovules/pipeline/plantseg/%s.npy\" % test_filename, plantseg)"
+    "    np.save(\"./results/%s/plantseg/%s\" % (dataset, test_filename), plantseg)"
    ]
   },
   {
@@ -158,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,15 +189,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Starting N_294_final_crop_ds2.npy\n",
+      "Starting N_435_final_crop_ds2.npy\n",
+      "Starting N_441_final_crop_ds2.npy\n",
+      "Starting N_511_final_crop_ds2.npy\n",
+      "Starting N_522_final_crop_ds2.npy\n",
+      "Starting N_590_final_crop_ds2.npy\n",
+      "Starting N_593_final_crop_ds2.npy\n"
+     ]
+    }
+   ],
    "source": [
     "for test_filename in test_filenames: \n",
     "    print(\"Starting %s\" % test_filename)\n",
-    "    img = np.load(\"%s/raw/%s\" % (ovules_folder, test_filename)) \n",
+    "    img = np.load(\"../DATA/%s/raw/%s\" % (dataset, test_filename)) \n",
     "    masks, _, _ = model.eval(img, do_3D=True, flow_threshold=flow_threshold, channels = [0,0]) \n",
-    "    np.save(\"./results/ovules/pipeline/cellpose3d/%s\" % test_filename, masks) "
+    "    np.save(\"./results/%s/cellpose3d/%s\" % (dataset, test_filename), masks) "
    ]
   },
   {
@@ -197,9 +223,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Starting N_294_final_crop_ds2.npy\n",
+      "Starting N_435_final_crop_ds2.npy\n",
+      "Starting N_441_final_crop_ds2.npy\n",
+      "Starting N_511_final_crop_ds2.npy\n",
+      "Starting N_522_final_crop_ds2.npy\n",
+      "Starting N_590_final_crop_ds2.npy\n",
+      "Starting N_593_final_crop_ds2.npy\n"
+     ]
+    }
+   ],
    "source": [
     "for test_filename in test_filenames: \n",
     "    print(\"Starting %s\" % test_filename)\n",
@@ -219,13 +259,93 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Starting N_294_final_crop_ds2.npy\n",
+      "Starting N_435_final_crop_ds2.npy\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: no mask pixels found\n",
+      "WARNING: no mask pixels found\n",
+      "WARNING: no mask pixels found\n",
+      "WARNING: no mask pixels found\n",
+      "WARNING: no mask pixels found\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Starting N_441_final_crop_ds2.npy\n",
+      "Starting N_511_final_crop_ds2.npy\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: no mask pixels found\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Starting N_522_final_crop_ds2.npy\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: no mask pixels found\n",
+      "WARNING: no mask pixels found\n",
+      "WARNING: no mask pixels found\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Starting N_590_final_crop_ds2.npy\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: no mask pixels found\n",
+      "WARNING: no mask pixels found\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Starting N_593_final_crop_ds2.npy\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: no mask pixels found\n"
+     ]
+    }
+   ],
    "source": [
     "for test_filename in test_filenames: \n",
     "    print(\"Starting %s\" % test_filename)\n",
-    "    img = np.load(\"%s/raw/%s\" % (ovules_folder, test_filename)) \n",
+    "    img = np.load(\"../DATA/%s/raw/%s\" % (dataset, test_filename)) \n",
     "    \n",
     "    cellstitch, _, _ = model.eval(list(img), flow_threshold=flow_threshold, channels = [0,0])\n",
     "    cellstitch = np.array(cellstitch)\n",
@@ -238,7 +358,7 @@
     "\n",
     "    full_stitch(cellstitch, yz_masks, xz_masks)\n",
     "    \n",
-    "    np.save(\"./results/ovules/pipeline/cellstitch/%s\" % test_filename, cellstitch) "
+    "    np.save(\"./results/%s/cellstitch/%s\" % (dataset, test_filename), cellstitch) "
    ]
   },
   {
@@ -250,47 +370,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Starting plantseg\n",
+      "Starting N_294_final_crop_ds2.npy\n",
+      "Starting N_435_final_crop_ds2.npy\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/yining/anaconda3/envs/segmentation/lib/python3.8/site-packages/cellpose/metrics.py:205: RuntimeWarning: invalid value encountered in true_divide\n",
+      "  iou = overlap / (n_pixels_pred + n_pixels_true - overlap)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Starting N_441_final_crop_ds2.npy\n",
+      "Starting N_511_final_crop_ds2.npy\n",
+      "Starting N_522_final_crop_ds2.npy\n",
+      "Starting N_590_final_crop_ds2.npy\n",
+      "Starting N_593_final_crop_ds2.npy\n"
+     ]
+    }
+   ],
    "source": [
-    "method = \"cellpose2d\" \n",
-    "ap_threshold = 0.5\n",
+    "methods = [\"plantseg\"]\n",
     "\n",
-    "data = [] \n",
-    "for filename in test_filenames:\n",
-    "    print(\"Starting %s\" % filename)\n",
-    "    labels = np.load('../DATA/%s/labels/%s' % (dataset, filename)) \n",
+    "for method in methods: \n",
+    "    print(\"Starting %s\" % method) \n",
     "    \n",
-    "    masks = np.load(\"./results/%s/%s/%s\" % (dataset, method, filename))\n",
+    "    data = []\n",
+    "    for filename in test_filenames:\n",
+    "        print(\"Starting %s\" % filename)\n",
+    "        labels = np.load('../DATA/%s/labels/%s' % (dataset, filename)) \n",
+    "        masks = np.load(\"./results/%s/%s/%s\" % (dataset, method, filename))\n",
+    "        \n",
+    "        ap25, _, _, _ = average_precision(labels, masks, 0.25)\n",
+    "        ap50, tp, fp, fn = average_precision(labels, masks, 0.5)\n",
+    "        ap75, _, _, _ = average_precision(labels, masks, 0.75) \n",
+    "        \n",
+    "        if (tp + fp) != 0: \n",
+    "            precision = tp / (tp + fp)\n",
+    "        else: \n",
+    "            precision = 0\n",
+    "            \n",
+    "        if tp + fp != 0: \n",
+    "            recall = tp / (tp + fn)\n",
+    "        else: \n",
+    "            precision = 0\n",
     "\n",
-    "    ap, tp, fp, fn = average_precision(labels, masks, ap_threshold)\n",
-    "    precision = tp / (tp + fp)\n",
-    "    recall = tp / (tp + fn)\n",
-    "    \n",
-    "    row = [ \n",
-    "        filename, \n",
-    "        ap, \n",
-    "        tp, \n",
-    "        fp, \n",
-    "        fn, \n",
-    "        precision,\n",
-    "        recall\n",
-    "    ]\n",
-    "    \n",
-    "    data.append(row)\n",
+    "        row = [ \n",
+    "            filename, \n",
+    "            ap25,\n",
+    "            ap50,\n",
+    "            ap75,\n",
+    "            tp, \n",
+    "            fp, \n",
+    "            fn, \n",
+    "            precision,\n",
+    "            recall\n",
+    "        ]\n",
     "\n",
-    "df = pd.DataFrame(data, columns=[\n",
-    "    \"filename\",\n",
-    "    \"ap\", \n",
-    "    \"tp\", \n",
-    "    \"fp\", \n",
-    "    \"fn\",\n",
-    "    \"precision\",\n",
-    "    \"recall\"\n",
-    "])\n",
+    "        data.append(row)\n",
     "\n",
-    "df.to_csv(\"./results/%s/%s.csv\" % (dataset, method), index=False)"
+    "    df = pd.DataFrame(data, columns=[\n",
+    "        \"filename\",\n",
+    "        \"ap25\", \n",
+    "        \"ap50\",\n",
+    "        \"ap75\", \n",
+    "        \"tp\", \n",
+    "        \"fp\", \n",
+    "        \"fn\",\n",
+    "        \"precision\",\n",
+    "        \"recall\"\n",
+    "    ])\n",
+    "\n",
+    "    df.to_csv(\"./results/%s/%s.csv\" % (dataset, method), index=False)"
    ]
   },
   {
