Updated benchmark scripts

--- a/notebooks/watershed_benchmark.ipynb
+++ b/notebooks/watershed_benchmark.ipynb
@@ -307,7 +307,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "res_path = '../results/ovules/ws3d/'V"
+    "res_path = '../results/ovules/ws3d/'"
    ]
   },
   {
