--- a/notebooks/data_preprocessing.ipynb
+++ b/notebooks/data_preprocessing.ipynb
@@ -3,16 +3,67 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "48c3a60f",
    "metadata": {},
    "outputs": [],
    "source": [
     "from cellstitch.utils import *\n",
     "import numpy as np\n",
-    "import h5py"
+    "import h5py\n",
+    "from tifffile import tifffile"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "1e43769d",
+   "metadata": {},
+   "source": [
+    "# Cellpose3D MorphoGraphX"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "da3cb904",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "filenames = set(get_filenames(\"../DATA/ATAS/raw/\"))\n",
+    "train_filenames = []\n",
+    "for file in os.listdir(\"../DATA/ATAS/cellpose_train/\"):\n",
+    "    if file.endswith(\".npy_95.tif\"):\n",
+    "        train_filenames.append(file[:-7])\n",
+    "\n",
+    "test_filenames = filenames - set(train_filenames)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "b49431ae",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_2455731/880311499.py:3: DeprecationWarning: <tifffile.imsave> is deprecated. Use tifffile.imwrite\n",
+      "  tifffile.imsave(\n"
+     ]
+    }
+   ],
+   "source": [
+    "for filename in test_filenames: \n",
+    "    raw = np.load(\"../DATA/ATAS/raw/%s\" % filename)\n",
+    "    tifffile.imsave(\n",
+    "    '../DATA/ATAS/mgx/%s.tif' % filename[:-4], \n",
+    "    raw\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c13b5627",
    "metadata": {},
    "source": [
     "# Anistropic Raw Data and Labels"
@@ -21,6 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "6e16a1f1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,6 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "290b786b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,6 +92,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "00739d07",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,6 +102,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "dbfb4441",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,6 +112,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "3a6f57ae",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,6 +136,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "3a84748a",
    "metadata": {},
    "source": [
     "### Test Data for PlantSeg"
@@ -88,6 +145,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
+   "id": "d47869c7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,6 +156,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
+   "id": "086d81f9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,6 +172,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
+   "id": "c35776e5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,6 +199,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "7061983b",
    "metadata": {},
    "source": [
     "For plant data"
@@ -147,6 +208,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "5ce02862",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,6 +218,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "0c791c76",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,6 +236,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "94fa1386",
    "metadata": {},
    "source": [
     "For ATAS"
@@ -181,6 +245,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
+   "id": "c13e0847",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,6 +261,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
+   "id": "4802f454",
    "metadata": {},
    "outputs": [
     {
@@ -239,6 +305,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "aa269cc8",
    "metadata": {},
    "outputs": [],
    "source": []
