--- a/notebooks/pipeline_benchmark_ovules.ipynb
+++ b/notebooks/pipeline_benchmark_ovules.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,16 +18,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset = \"ovules_subsampled\" # or ovules_subsampled"
+    "dataset = \"ovules\" # or ovules_subsampled"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -370,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -378,8 +378,7 @@
      "output_type": "stream",
      "text": [
       "Starting plantseg\n",
-      "Starting N_294_final_crop_ds2.npy\n",
-      "Starting N_435_final_crop_ds2.npy\n"
+      "Starting N_294_final_crop_ds2.npy\n"
      ]
     },
     {
@@ -394,6 +393,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Starting N_435_final_crop_ds2.npy\n",
       "Starting N_441_final_crop_ds2.npy\n",
       "Starting N_511_final_crop_ds2.npy\n",
       "Starting N_522_final_crop_ds2.npy\n",
